[add] splash screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,14 +8,23 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.activity.SampleActivity"/>
+        <activity android:name=".ui.activity.SampleActivity"
+            android:screenOrientation="portrait"/>
 
-        <activity android:name=".ui.activity.MainActivity"
+        <activity android:name=".ui.activity.SplashScreenActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity android:name=".ui.activity.IntroActivity"
+            android:screenOrientation="portrait"/>
+
+        <activity android:name=".ui.activity.MainActivity"
+            android:screenOrientation="portrait">
+
         </activity>
     </application>
 
