--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.main">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/icon_anpan_active"
@@ -20,6 +22,9 @@
         </activity>
 
         <activity android:name=".ui.activity.IntroActivity"
+            android:screenOrientation="portrait"/>
+
+        <activity android:name=".ui.activity.TermOfUseActivity"
             android:screenOrientation="portrait"/>
 
         <activity android:name=".ui.activity.MainActivity"
