--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
     <uses-permission android:name="jp.anpanman.fanclub.permission.C2D_MESSAGE" />
 
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.GET_TASKS"/>
     <!-- push通知タップ時に遷移するActivity -->
 
 
@@ -69,7 +70,7 @@
 
         <activity
             android:name="jp.anpanman.fanclub.main.ui.activity.MainActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait"/>
 
 
         <!-- For receiving GCM message and registration success -->
@@ -113,7 +114,7 @@
         <!-- Listen Push Notify to show Dialog Coupon -->
         <receiver android:name="jp.anpanman.fanclub.main.util.PushNotifyListenReceiver">
             <intent-filter>
-                <action android:name="com.hmkcode.android.USER_ACTION" />
+                <action android:name="jp.anpanman.fanclub.PUSH_NOTIFY" />
             </intent-filter>
         </receiver>
 
@@ -123,7 +124,7 @@
 
         <!-- 受信クラス設定
      カスタム   : android:name="パッケージ名.MyCustomService"
-     デフォルト : android:name="com.nifty.cloud.mb.core.NCMBGcmListenerService" -->
+     デフォルト : android:name="com.nifty.cloud.mb.core.NCMBListenerService" -->
 
         <!-- ダイアログPush通知設定-->
         <activity
@@ -131,7 +132,7 @@
             android:excludeFromRecents="true"
             android:launchMode="singleInstance"
             android:noHistory="true"
-            android:theme="@android:style/Theme.Wallpaper.NoTitleBar"></activity>
+            android:theme="@android:style/Theme.Wallpaper.NoTitleBar"/>
         <!-- プッシュ通知タップ時に起動するActivityの設定 -->
     </application>
 
