--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,7 +70,8 @@
 
         <activity
             android:name="jp.anpanman.fanclub.main.ui.activity.MainActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait"
+            android:launchMode="singleTop"/>
 
 
         <!-- For receiving GCM message and registration success -->
@@ -112,12 +113,6 @@
             </intent-filter>
         </service>
         <!-- Listen Push Notify to show Dialog Coupon -->
-        <receiver android:name="jp.anpanman.fanclub.main.util.PushNotifyListenReceiver">
-            <intent-filter>
-                <action android:name="jp.anpanman.fanclub.PUSH_NOTIFY" />
-            </intent-filter>
-        </receiver>
-
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
