--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,8 +25,9 @@
 
 
     <application
+        android:name="jp.anpanman.fanclub.main.AnpanmanApp"
         android:allowBackup="true"
-        android:icon="@drawable/icon_anpan_active"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
