--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.google.code.gson:gson:2.6.2'
     compile files('libs/NCMB.jar')
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
