--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-//apply plugin: 'com.google.gms.google-services'
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
@@ -29,4 +28,6 @@ dependencies {
     compile 'com.google.code.gson:gson:2.6.2'
     compile files('libs/NCMB.jar')
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.google.android.gms:play-services-analytics:9.4.0'
 }
+apply plugin: 'com.google.gms.google-services'
