--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,8 +49,8 @@
             android:name="dialogPushBackgroundImage"
             android:resource="@drawable/icon_anpan_active" />
 
-        <activity
-            android:name="jp.anpanman.fanclub.main.ui.activity.SplashScreenActivity"
+        <activity android:name="jp.anpanman.fanclub.main.ui.activity.ApdllpActivity"
+            android:noHistory="true"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -62,9 +62,13 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
-                        <data android:scheme="anpanmanfanclub" />
+                <data android:scheme="anpanmanfanclub" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name="jp.anpanman.fanclub.main.ui.activity.SplashScreenActivity"
+            android:screenOrientation="portrait" />
 
         <activity
             android:name="jp.anpanman.fanclub.main.ui.activity.IntroActivity"
