--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,25 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    productFlavors{
+
+        anpanman_dev{
+            buildConfigField "String", "NOTIFY_APPLICATION_KEY", '"053783832795fdd71457a12a03ac4e2815b5d91f9a8a78335162e38e67ff044d"'
+            buildConfigField "String", "NOTIFY_CLIENT_KEY", '"ce128960dd747c968359493771eb18c4cd368d9e41e88e5091e3f043711d094d"'
+            buildConfigField "String", "HOST", '"http://stg-fcapp.anpanman.jp"'
+
+        }
+
+        anpanman_prod{
+            buildConfigField "String", "NOTIFY_APPLICATION_KEY", '"7f7bd645a0944f6c8df502775e6720b78eb95c7ddd348f10d3293fc25a0fbe4b"'
+            buildConfigField "String", "NOTIFY_CLIENT_KEY", '"8b3fc5a7c299d585f760e24f4b90b6430e7126e499eae221157a6dfd5c89179c"'
+            buildConfigField "String", "HOST", '"http://fcapp.anpanman.jp"'
+        }
+    }
+
+
+
 }
 
 dependencies {
