--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,7 @@
             android:name="dialogPushBackgroundImage"
             android:resource="@drawable/icon_anpan_active" />
 
-        <activity android:name="jp.anpanman.fanclub.main.ui.activity.ApdllpActivity"
+        <activity android:name="jp.anpanman.fanclub.main.ui.activity.SplashScreenActivity"
             android:noHistory="true"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -65,10 +65,6 @@
                 <data android:scheme="anpanmanfanclub" />
             </intent-filter>
         </activity>
-
-        <activity
-            android:name="jp.anpanman.fanclub.main.ui.activity.SplashScreenActivity"
-            android:screenOrientation="portrait" />
 
         <activity
             android:name="jp.anpanman.fanclub.main.ui.activity.IntroActivity"
